[package]
name = "choreographer"
version = "0.0.4"
description = "A color pattern sequencer, intended for groups of RGB LEDs"
repository = "https://github.com/jamesmunns/choreographer"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MPL-2.0"

[dependencies]
groundhog = "0.2.3"
heapless = "0.7.1"
smart-leds = "0.3.0"
micromath = "2.0.0"

[features]
testing = ["groundhog/instant"]
default = []

[package.metadata.docs.rs]
all-features = true
